--- a/style.css
+++ b/style.css
@@ -19,10 +19,6 @@ header {
 	background-color: #5D5E5D;
 	border-bottom: 6px solid #353635;
 }
-#banner {
-	background-image: linear-gradient();
-background-size: auto;
-}
 .logo {
 	color: #fff;
 	font-weight: bold;
@@ -112,7 +108,6 @@ nav > a:hover {
   background-color: #6DC7D0;
   border-bottom: 1px solid #6DC7D0;
 }
-
 .column {
 	width: 50%;
 	text-align: center;
@@ -121,6 +116,7 @@ nav > a:hover {
 .intro .column h3 {
 	color: #FFFFFF;
 	text-align: center;
+	size: 100%
 }
 .intro .column p {
 	color: #FFFFFF;
